--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 author_profile: true
-excerpt: "Dat Hwan - Just a simple person striving to be my best."
+excerpt: "Dat Hwang - Just a simple person striving to be my best."
 title: Home
 ---
 
